--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.2",
+    "node.js": "^0.0.1-security",
     "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
